chore 1.添加自定义指令配置 2.添加简短指令开关配置 3.优化奖励配置页面操作逻辑 4.添加服务器默认语言、玩家语言的设置指令
fix
1.随机奖励池奖励概率显示错误
2.连续签到奖励无法通过粘贴操作添加

(cherry picked from commit 5a3e641aceeba76f35dc9b8c040216fa3dafbc28)